--- a/doc/converse/msgmgr.tex
+++ b/doc/converse/msgmgr.tex
@@ -10,7 +10,7 @@ their tags), and functions to selectively retrieve messages from
 tables according to their tags.  Wildcard tags can be specified in
 both storage and retrieval.
 
-In actuality, the term "message manager" is unnecessarily specific.
+In actuality, the term ``message manager'' is unnecessarily specific.
 The message manager can store and retrieve arbitrary pointers
 according to a set of tags.  The pointers do {\em not} necessarily
 need to be pointers to converse messages.  They can be pointers to
@@ -22,19 +22,11 @@ a table which can be used to store messages.  No information is publicized
 about the format of a CmmTableStruct.}
 
 \function{\#define CmmWildCard (-1)}
-\desc{This \#define is in {\tt converse.h}.  The tag -1 is the "wild
-card" for the tag-based lookup functions in the message manager.}
+\desc{This \#define is in {\tt converse.h}.  The tag -1 is the ``wild
+card'' for the tag-based lookup functions in the message manager.}
 
 \function{CmmTable CmmNew();}
 \desc{This function creates a new message-table and returns it.}
-
-\function{void CmmFree(CmmTable t);}
-\desc{This function frees a message-table t.  WARNING: It also frees all
-the messages that have been inserted into the message table.  It assumes
-that the correct way to do this is to call {\tt CmiFree} on the message.
-If this assumption is incorrect, a crash will occur.  The way to avoid
-this problem is to remove and properly dispose all the messages in a table
-before disposing the table itself.}
 
 \function{void CmmPut(CmmTable t, int ntags, int *tags, void *msg)}
 \desc{This function inserts a message into a message table, along with
@@ -44,15 +36,15 @@ and {\tt t} specify the message and table, respectively.}
 
 \function{void *CmmGet(CmmTable t, int ntags, int *tags, int *ret\_tags)}
 \desc{This function looks up a message from a message table.  A
-message will be retrieved that "matches" the specified {\tt tags}
-array.  If a message is found that "matches", the tags with which
+message will be retrieved that ``matches'' the specified {\tt tags}
+array.  If a message is found that ``matches'', the tags with which
 it was stored are copied into the {\tt ret\_tags} array, a pointer
 to the message will be returned, and the message will be deleted
 from the table.  If no match is found, 0 will be returned.
 
-To "match", the array {\tt tags} must be of the same length as the
+To ``match'', the array {\tt tags} must be of the same length as the
 stored array.  Similarly, all the individual tags in the stored array
-must "match" the tags in the {\tt tags} array.  Two tags match if they
+must ``match'' the tags in the {\tt tags} array.  Two tags match if they
 are equal to each other, or if {\tt either} tag is equal to {\tt
 CmmWildCard} (yes, that means if I can {\tt store} messages with
 wildcard tags, making it easier to find those messages on retrieval).}
@@ -60,5 +52,13 @@ wildcard tags, making it easier to find those messages on retrieval).}
 \function{void *CmmProbe(CmmTable t, int ntags, int *tags, int *ret\_tags)}
 \desc{This function is identical to {\tt CmmGet} above, except that
 the message is not deleted from the table.}
+
+\function{void CmmFree(CmmTable t);}
+\desc{This function frees a message-table t.  WARNING: It also frees all
+the messages that have been inserted into the message table.  It assumes
+that the correct way to do this is to call {\tt CmiFree} on the message.
+If this assumption is incorrect, a crash will occur.  The way to avoid
+this problem is to remove and properly dispose all the messages in a table
+before disposing the table itself.}
 
 
