--- a/doc/converse/threads.tex
+++ b/doc/converse/threads.tex
@@ -105,7 +105,7 @@ being used, threads should call {\tt CthSuspend} when they wish to
 give up control of the CPU.  {\tt CthSuspend} will then automatically
 transfer control to some other thread that wants the CPU.  {\tt
 CthSuspend} will select the thread to transfer control to by calling a
-user-supplied "choose-next" function (see {\tt CthSetStrategy}
+user-supplied ``choose-next'' function (see {\tt CthSetStrategy}
 below).}
 
 \function{void CthAwaken(CthThread t)}
@@ -113,7 +113,7 @@ below).}
 being used, this function should be used to notify the scheduler that
 thread {\tt t} wants the CPU.  This will enable the scheduler to
 select thread {\tt t} for execution at some point in the future.
-In actuality, {\tt CthAwaken} simply calls the user-supplied "awaken"
+In actuality, {\tt CthAwaken} simply calls the user-supplied ``awaken''
 function (see {\tt CthSetStrategy} below).  It is illegal to call
 {\tt CthAwaken} on a thread which has already been awakened, unless
 the thread has been scheduled since the last awaken.}
@@ -151,12 +151,12 @@ the choosefn may return that thread.  If no pending events exist, then
 all threads will remain permanently blocked, the program is therefore
 done, and the {\tt choosefn} should call {\tt exit}.
 
-There is one minor exception to the rule stated above ("the scheduler
+There is one minor exception to the rule stated above (``the scheduler
 may not resume a thread unless it has been declared that the thread
-wants the CPU using the {\tt awakefn}").  If a thread is a part of the
-scheduling module, it is permitted for it to short-circuit the {\tt
-awakefn}: presumably, the scheduling module has other means of knowing
-when its threads want the CPU.}
+wants the CPU using the {\tt awakefn}'').  If a thread {\tt t} is
+part of the scheduling module, it is permitted for the scheduling
+module to resume {\tt t} whenever it so desires: presumably, the
+scheduling module knows when its threads want the CPU.}
 
 \function{void CthYield()}
 \desc{This function is part of the scheduler-interface.  It simply
