--- a/doc/converse/scheduler.tex
+++ b/doc/converse/scheduler.tex
@@ -2,6 +2,7 @@
 
 
 \function{void ConverseInit(char *argv[])}
+\index{ConverseInit}
 \desc{This function initializes the machine interface. It should be
 called prior to any other Converse functions. 
 Multiple calls to this function in a process should
@@ -11,6 +12,7 @@ It would be utilized by \param{ConverseInit()} to initialize
 machine specific parameters such as number of processors.}
 
 \function{void ConverseExit(void)}
+\index{ConverseExit}
 \desc{This function frees the resources acquired by Converse and wraps up. 
 Any other Converse function should not be called after a call to this function.
 \note{It does not terminate the calling
@@ -30,17 +32,20 @@ ConverseInit().
 }
 
 \function {void CsdScheduler(int NumberOfMessages)}
+\index{CsdScheduler}
 \desc{This call invokes the Converse scheduler. The {\tt NumberOfMessages}
 parameter specifies how many messages should be processed (i.e. delivered
 to their handlers). If set to -1, the scheduler continues processing
 messages until CsdExitScheduler() is called from a message handler.}
 
 \function {void CsdExitScheduler(void)}
+\index{CsdExitScheduler}
 \desc{This call causes the scheduler
 to stop processing messages when control has returned back to it.
 The scheduler then returns to its calling routine.}
 
 \function{void CsdEnqueueGeneral(void *Message, int strategy, int priobits, int *prioptr)}
+\index{CsdEnqueueGeneral}
 \desc{This call enqueues a message to the scheduler's queue, to be processed in 
 accordance with the queueing \param{strategy}. \param{priobits} and
 \param{prioptr} specify information about priority associated with the message
@@ -59,7 +64,9 @@ Also, it is used to enqueue local ready entities, such as threads.
 because on returning from the handler, the system can reuse the buffer.}}
 
 \function {void CsdEnqueue(void *Message)}
+\index{CsdEnqueue}
 \function{void CsdEnqueueFifo(void *Message)}
+\index{CsdEnqueueFifo}
 \desc{
 	This macro is a shorthand for 
 	{\tt CsdEnqueueGeneral(Message, CQS\_QUEUEING\_FIFO,0, NULL)} 
@@ -68,6 +75,7 @@ because on returning from the handler, the system can reuse the buffer.}}
 
 
 \function{void CsdEnqueueLifo(void *Message)}
+\index{CsdEnqueueLifo}
 \desc{
 	This macro is a shorthand for
 	{\tt CsdEnqueueGeneral(Message, CQS\_QUEUEING\_LIFO,0, NULL)} 
@@ -75,6 +83,7 @@ because on returning from the handler, the system can reuse the buffer.}}
 }
 
 \function{int CsdEmpty()}
+\index{CsdEmpty}
 \desc{
 	This function returns non-zero integer when the scheduler's queue
 	is empty, zero otherwise.
