--- a/doc/install/install.tex
+++ b/doc/install/install.tex
@@ -12,7 +12,10 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.4  1995-11-01 20:28:01  jyelon
+% Revision 1.5  1995-11-01 21:36:09  jyelon
+% *** empty log message ***
+%
+% Revision 1.4  1995/11/01  20:28:01  jyelon
 % *** empty log message ***
 %
 % Revision 1.3  1995/11/01  20:18:51  jyelon
@@ -143,18 +146,18 @@ funding agencies to continue to support our work.)  To this end, we
 have inserted code in the network {\tt conv-host} program (described
 later) to notify us that our software is being used.
 Implementationally speaking, the {\tt conv-host} program sends a
-single {\tt UDP} packet to {\tt charm.cs.uiuc.edu}.  We simply gather
-these statistics packets into tables recording the number of different
-institutions and individuals using our software, and the frequency
-with which it is used.
+single {\tt UDP} packet to {\tt charm.cs.uiuc.edu}.  This data is put
+to one use only: it is gathered into tables recording the names of
+the institutions using our software, the number of individuals
+at each institution, and the frequency with which it is used.
 
 Please note that this notification code {\tt only} exists within the
 network version.  It does {\em not} exist within any other version.
 
-We recognize that some users will object to our gathering statistics.
-Therefore, we have provided a second copy of the {\tt conv-host}
-program with the notification code removed.  If you look within the
-charm {\tt bin} directory, you will find these programs:
+We recognize that some users may have objections to our notification
+code.  Therefore, we have provided a second copy of the {\tt
+conv-host} program with the notification code removed.  If you look
+within the charm {\tt bin} directory, you will find these programs:
 
 \begin{verbatim}
 
@@ -167,14 +170,13 @@ charm {\tt bin} directory, you will find these programs:
 \end{verbatim}
 
 The program {\tt conv-host.silent} has the notification code removed.  To
-permanently deactivate notification, you may delete the version containing
-the notification code:
+permanently deactivate notification, you may use the version without the
+notification code:
 
 \begin{verbatim}
 
     % cd /usr/local/charm/bin
     % cp conv-host.silent conv-host
-    % rm conv-host.notify
 
 \end{verbatim}
 
@@ -220,7 +222,7 @@ combined charm/charm++ runtime library:
 \end{verbatim}
 
 If you are using neither charm nor charm++, you may delete the charm
-and charm++ include files: everything in {\tt include} which doesn't
+and charm++ include files.  Everything in {\tt include} which doesn't
 start with {\tt conv} (eg, converse) is charm-related:
 
 \begin{verbatim}
